# CLEO-sdm-eurec4a

./: .gitignore  .pre-commit-config.yaml  ci_environment.yaml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  setup.py
examples/eurec4a1d/: CMakeLists.txt  build_compile_CLEO.sh  build_compile_eurec4a1d.sh  build_compile_run_eurec4a1d.sh  create_init_files.sh  create_init_files_array.sh  create_model_input_files.sh  eurec4a1d.sh  eurec4a1d_build_compile_CLEO.sh  eurec4a1d_create_init_files.sh  eurec4a1d_run_executable_CLEO.sh  eurec4a1d_update_config.sh  run_executable_CLEO_array.sh  submit_job_array.sh  update_job_array_number.sh
examples/eurec4a1d/default_config/: breakup.yaml  eurec4a1d_config.yaml  eurec4a1d_config_evolving.yaml  eurec4a1d_config_stationary.yaml
examples/eurec4a1d/no_job_array/: eurec4a1d_create_init_files.sh  eurec4a1d_run_executable_CLEO.sh
examples/eurec4a1d/scripts/: 56_eurec4a1d_evolving_psd_fitting.ipynb  56_eurec4a1d_evolving_psd_fitting.py  create_init_files_job_array.sh  create_model_input_mpi4py.py  create_model_input_mpi4py.sh  debug_individual_run_CLEO.sh  eurec4a1d_evolving.py  eurec4a1d_run_executable.py  eurec4a1d_stationary.py  eurec4a1d_update_config.py  execute_single_run.sh  run_CLEO_job_array.sh  run_job_array.sh  run_job_array_eurec4a1d.sh  update_config_files.py  update_config_files.sh
examples/eurec4a1d/src/: main_eurec4a1D.cpp
examples/eurec4a1d/src/config/: eurec4a1d_config_stationary.yaml
examples/eurec4a1d/stationary_coalbure_condensation_cke/src/: CMakeLists.txt  main_eurec4a1D.cpp  main_eurec4a1d.cpp
examples/eurec4a1d/stationary_coalbure_condensation_large/src/: CMakeLists.txt  breakup.yaml  main_eurec4a1D.cpp  main_eurec4a1d.cpp
examples/eurec4a1d/stationary_coalbure_condensation_small/src/: CMakeLists.txt  breakup.yaml  main_eurec4a1D.cpp  (+1 more)
(+147 files in other folders)
